--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,6 +9,14 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Group detail</h2>
       <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>グループ名</th>
+            <th>紹介文</th>
+            <th>メンバー</th>
+          </tr>
+        </thead>
         <tbody>
           <tr>
             <td>
@@ -18,8 +26,17 @@
             </td>
             <td><%= link_to @group.name, group_path(@group) %></td>
             <td><%= @group.introduction %></td>
+            <td>
+              <% @group.users.each do |group_user| %>
+                <%= group_user.name %><br>
+              <% end %>
+            </td>
             <% if @group.owner_id == current_user.id %>
               <td><%= link_to "Edit", edit_group_path(@group), class: "btn btn-success" %></td>
+            <% elsif @group.users.include?(current_user) %>
+              <td><%= link_to "Leave this group", group_path(@group), method: :delete, class: "btn btn-danger" %></td>
+            <% else %>
+              <td><%= link_to "Join this group", group_join_path(@group), class: "btn btn-success" %></td>
             <% end %>
           </tr>
         </tbody>
